# ConvergedComputing

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AGGREGATION_MODULE_FIX_V1.2_IMPLEMENTATION.md  ANALYSIS_REPORT.md  BATCH_API_TEST_RESULTS.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_FILES_CHECKLIST.md  DIMENSION_CLEANING_VERIFICATION_SUMMARY.md  DOCKER_DEPLOYMENT_GUIDE.md  DOCKER_SYNC_GUIDE.md  Dockerfile  ENHANCED_REGIONAL_SUMMARY.md  FINAL_AGGREGATION_TEST_REPORT.md  FINAL_OPTIMIZATION_REPORT.md  IFLOW.md  Makefile  OPTIMIZATION_RECOMMENDATIONS.md  PO_OPTIMIZATION_FINAL_REPORT.md  QUICK_TEST_GUIDE.md  README.md  STARTUP_TESTING_GUIDE.md  _chunk.txt  acceptance_verification_v12.py  add_performance_indexes.py  add_subject_type_field.py  add_updated_at_field.py  aggregation_api.py  aggregation_engine.py  alembic.ini  analyze_all_batches_data.py  api_integration_example.py  apply_mysql_optimization.py  auto_batch_recalculation.py  backfill_exam_interaction_totals.py  batch_aggregation_runner.py  batch_api_test_report_zh.md  batch_cleaning_runner.py  batch_recalculation.py  (+207 more)
.bmad-core/: install-manifest.yaml
deployment_package_20250909/: DEPLOYMENT_GUIDE.md  Dockerfile  docker-compose.yml  package.bat  package.sh  pyproject.toml  requirements.txt
deployment_package_20250909/app/: __init__.py  main.py
deployment_package_20250909/app/api/: __init__.py  calculation_api.py  management_api.py  reporting_api.py
deployment_package_20250909/docs/: 初中分析报告数据需求.md  数据库表结构详细说明文档.md  汇聚模块修复实施方案.md  汇聚模块修复实施结果报告.md
deployment_package_20250909/scripts/: rewrite_subjects_v12.py
(+159 files in other folders)
